--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href = "style.css">
     <title>Web Calculator</title>
+    <link rel="shortcut icon" type="image/jpg" href="calculator.ico"/>
 </head>
 <body OnLoad="document.calc.display.focus();">
     <div id="example1">
