--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="shortcut icon" type="image/jpg" href="calculator.ico"/>
 </head>
 <body OnLoad="document.calc.display.focus();">
-    <div id="example1">
-    <div id="example2">
+    <div id="content1">
+    <div id="content2">
     <h1>Web Calculator</h1>
     </div>
     <form id="myform" Name="calc">
-        <input readonly onblur="this.focus()" autofocus type="text" name="display" autocomplete="off" placeholder = "Enter"><br/>
+        <input onblur="this.focus()" autofocus type="text" name="display" autocomplete="off" placeholder = "Enter"><br/>
         <input type="button" value="9" onclick="calc.display.value+='9'">
         <input type="button" value="C" onclick="calc.display.value =''">
         <input type="submit" value="=" onclick="calc.display.value = eval(calc.display.value);return false;">
