--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body OnLoad="document.calc.display.focus();">
     <div id="content1">
-    <div id="content2">
+    <div id="example2">
     <h1>Web Calculator</h1>
     </div>
     <form id="myform" Name="calc">
