--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/jpg" href="calculator.ico"/>
 </head>
 <body OnLoad="document.calc.display.focus();">
-    <div id="content1">
+    <div id="example1">
     <div id="example2">
     <h1>Web Calculator</h1>
     </div>
